# content-hub

content/response_integrations/google/active_directory/resources/ai/: actions_ai_description.yaml
content/response_integrations/google/alexa/resources/ai/: actions_ai_description.yaml
content/response_integrations/google/algo_sec/resources/ai/: actions_ai_description.yaml
content/response_integrations/google/alien_vault_anywhere/resources/ai/: actions_ai_description.yaml
content/response_integrations/google/alien_vault_appliance/resources/ai/: actions_ai_description.yaml
content/response_integrations/google/alien_vault_ti/resources/ai/: actions_ai_description.yaml
content/response_integrations/google/amazon_macie/resources/ai/: actions_ai_description.yaml
content/response_integrations/google/anomali/resources/ai/: actions_ai_description.yaml
content/response_integrations/google/anomali_staxx/resources/ai/: actions_ai_description.yaml
content/response_integrations/google/fire_eye_etp/: ontology_mapping.yaml  pyproject.toml
content/response_integrations/google/fire_eye_etp/actions/: ping.py  ping.yaml
content/response_integrations/google/fire_eye_etp/connectors/: email_alerts_connector.py  email_alerts_connector.yaml
content/response_integrations/google/fire_eye_etp/core/: datamodels.py  fire_eye_etp_constants.py  fire_eye_etp_exceptions.py  fire_eye_etp_manager.py  fire_eye_etp_parser.py  utils_manager.py
content/response_integrations/google/fire_eye_etp/resources/ai/: actions_ai_description.yaml
content/response_integrations/google/fire_eye_etp/tests/: common.py
content/response_integrations/google/fire_eye_etp/tests/test_defaults/: test_imports.py
(+198 files in other folders)
